@@ -32,3 +32,4 @@ Fixes/Patches incorporated from:
 	Sang Jin Park
 	Dieter Maurer
 	Leonardo Rochael Almeida
+	Paolo Dotta
