@@ -121,7 +121,6 @@ C_FILES = Av_CharPtrPtr.c \
 O_FILES = Av_CharPtrPtr.o \
 	SQLRCursor.o
 H_FILES = Av_CharPtrPtr.h \
-	perlincludes.h \
 	perlincludes1.h \
 	perlincludes2.h \
 	perlincludes3.h
@@ -285,10 +284,10 @@ MPOLLUTE =
 # Firstworks::SQLRCursor might depend on some other libraries:
 # See ExtUtils::Liblist for details
 #
-EXTRALIBS = -L/usr/local/firstworks/lib -lrudiments -lstdc++-3-libc6.2-2-2.10.0 -lc
-LDLOADLIBS = -L/usr/local/firstworks/lib -lrudiments -lstdc++-3-libc6.2-2-2.10.0 -lc
+EXTRALIBS = -L/usr/local/src/sqlrelay/src/api/perl/SQLRCursor/../../c++/src/.libs -lsqlrclient -L/usr/local/firstworks/lib -lrudiments -lstdc++-3-libc6.2-2-2.10.0 -lc
+LDLOADLIBS = -L/usr/local/src/sqlrelay/src/api/perl/SQLRCursor/../../c++/src/.libs -lsqlrclient -L/usr/local/firstworks/lib -lrudiments -lstdc++-3-libc6.2-2-2.10.0 -lc
 BSLOADLIBS = 
-LD_RUN_PATH = /usr/local/firstworks/lib:/usr/lib:/lib
+LD_RUN_PATH = /usr/local/src/sqlrelay/src/api/perl/SQLRCursor/../../c++/src/.libs:/usr/local/firstworks/lib:/usr/lib:/lib
 
 
 # --- MakeMaker const_cccmd section:
@@ -883,12 +882,12 @@ pm_to_blib: $(TO_INST_PM)
 #	DLEXT => q[so]
 #	DLSRC => q[dl_dlopen.xs]
 #	EXE_EXT => q[]
-#	EXTRALIBS => q[-L/usr/local/firstworks/lib -lrudiments -lstdc++-3-libc6.2-2-2.10.0 -lc]
+#	EXTRALIBS => q[-L/usr/local/src/sqlrelay/src/api/perl/SQLRCursor/../../c++/src/.libs -lsqlrclient -L/usr/local/firstworks/lib -lrudiments -lstdc++-3-libc6.2-2-2.10.0 -lc]
 #	FIRST_MAKEFILE => q[Makefile]
 #	FULLEXT => q[Firstworks/SQLRCursor]
 #	FULLPERL => q[/usr/bin/perl]
 #	FULL_AR => q[/usr/bin/ar]
-#	H => [q[Av_CharPtrPtr.h], q[perlincludes.h], q[perlincludes1.h], q[perlincludes2.h], q[perlincludes3.h]]
+#	H => [q[Av_CharPtrPtr.h], q[perlincludes1.h], q[perlincludes2.h], q[perlincludes3.h]]
 #	HAS_LINK_CODE => q[1]
 #	HTMLEXT => q[html]
 #	HTMLLIBPODS => {  }
@@ -933,8 +932,8 @@ pm_to_blib: $(TO_INST_PM)
 #	LDDLFLAGS => q[-G]
 #	LDFLAGS => q[ -L/usr/local/lib]
 #	LDFROM => q[$(OBJECT)]
-#	LDLOADLIBS => q[-L/usr/local/firstworks/lib -lrudiments -lstdc++-3-libc6.2-2-2.10.0 -lc]
-#	LD_RUN_PATH => q[/usr/local/firstworks/lib:/usr/lib:/lib]
+#	LDLOADLIBS => q[-L/usr/local/src/sqlrelay/src/api/perl/SQLRCursor/../../c++/src/.libs -lsqlrclient -L/usr/local/firstworks/lib -lrudiments -lstdc++-3-libc6.2-2-2.10.0 -lc]
+#	LD_RUN_PATH => q[/usr/local/src/sqlrelay/src/api/perl/SQLRCursor/../../c++/src/.libs:/usr/local/firstworks/lib:/usr/lib:/lib]
 #	LIBC => q[/lib/libc-2.2.5.so]
 #	LIBPERL_A => q[libperl.a]
 #	LIBS => [q[-L../../c++/src/.libs -lsqlrclient -L/usr/local/firstworks/lib -lrudiments  -lstdc++-3-libc6.2-2-2.10.0 -lc]]
