@@ -64,7 +64,7 @@
 
 #define BINDVARLENGTH 30
 #define STRINGBINDVALUELENGTH 4000
-#define LOBBINDVALUELENGTH 2097152
+#define LOBBINDVALUELENGTH 70*1024
 #define MAXQUERYSIZE 32768
 #define MAXVAR 256
 
