@@ -7,7 +7,7 @@
 #./msql.pl localhost 8005 "" msqltest msqltest
 #./mysql.pl localhost 8006 "" mysqltest mysqltest
 #./oracle7.pl localhost 8008 "" oracle7test oracle7test
-./oracle8.pl localhost 8009 "" oracle8test oracle8test
+./oracle8.pl localhost 8009 "/tmp/sqlrelay.socket" oracle8test oracle8test
 #./postgresql.pl localhost 8010 "" postgresqltest postgresqltest
 #./sqlite.pl localhost 8011 "" sqlitetest sqlitetest
 #./sybase.pl localhost 8012 "" sybasetest sybasetest
